# endpointops-365

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  security.yml
data/schema/: devices.schema.json  software_inventory.schema.json  tickets.schema.json  users.schema.json  vulnerabilities.schema.json
data/synthetic/: devices.csv  software_inventory.csv  tickets.csv  users.csv  vulnerabilities.csv
data/synthetic/graph_mock_responses/: devices.json  groups.json  users.json
docs/: architecture.md  data-model.md  demo-script.md  graph-permissions.md  intune-concepts.md  lab-topology-sanitized.md  privacy-and-sanitization.md
docs/runbooks/: bitlocker-documentation-simulated.md  endpoint-intake.md  imaging-validation.md  loaner-device-handoff.md  offboarding-device-return.md  patch-triage.md
reports/: sample-endpoint-readiness-report.md  sample-patch-risk-report.md  sample-ticket-output.md
scripts/powershell/: Invoke-EndpointReadinessCheck.ps1  Invoke-GraphDryRun.ps1  New-EndpointReadinessReport.ps1  New-PatchRiskReport.ps1  README.md
scripts/shell/: report.sh  scan.sh  seed.sh  test.sh
src/endpointops/: __init__.py  api.py  cli.py  models.py  report.py  sanitizer.py  scoring.py
tests/powershell/: EndpointReadiness.Tests.ps1  PatchRisk.Tests.ps1
tests/python/: test_api.py  test_sanitizer.py  test_schema_validation.py  test_scoring.py  test_ticket_generation.py
tools/: gitleaks.toml  psscriptanalyzer.psd1  trivy.yaml
