[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "endpointops-365"
version = "0.1.0"
description = "Synthetic endpoint lifecycle and patch risk automation lab"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
endpointops = "endpointops.cli:main"
